tests/golden/type_errors/index_non_array.err
Type error at 1:8: can only index arrays or maps
  print 1[0];
         ^
